@@ -10176,7 +10176,7 @@ Video Disk Recorder Revision History
 - Fixed an 'invalid lock sequence' when deleting the timeshift timer.
 - Added DeviceFreeze() when pausing at the last mark (reported by Andreas Baierl).
 
-2026-01-14:
+2026-01-16:
 
 - Fixed a memory leak in cMark::Parse() (thanks to Fabian Wolter).
 - Revised the German language texts (thanks to Stefan Hofmann).
@@ -10238,3 +10238,4 @@ Video Disk Recorder Revision History
 - The SVDRP command PLAY now returns the id and title of the currently replayed recording
   if no parameter is given (suggested by Stefan Hofmann).
 - Updated the Italian OSD texts (thanks to Diego Pierotto).
+- Themes are now sorted alphabetically in the Setup/OSD menu.
